testsuite/poke.pkl/attr-ref-diag-2.pk
/* { dg-do compile } */

var a = (23#B as offset<int<32>,B,string>)'ref ("foo"); /* { dg-error "invalid argument.*\n.*expected integral" } */
